# peas

./: .gitignore  Makefile  README.md  docker-compose.yml
peas_backend/: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  pyproject.toml  sqlite.db
peas_backend/peas_app/api/: app.py  dependencies.py
peas_backend/peas_app/api/controllers/v1/: product_controller.py  recipe_controller.py
peas_backend/peas_app/api/dtos/v1/: pagination.py  unit.py
peas_backend/peas_app/api/exceptions/: exception_handler.py
peas_backend/peas_app/api/logging/: logger.py
peas_backend/peas_app/api/mappers/: pagination_mapper.py  product_mapper.py  recipe_mapper.py  unit_mapper.py
peas_backend/peas_app/api/services/: product_service.py  recipe_service.py
peas_backend/peas_app/database/: alembic.ini  db_config.py
peas_backend/peas_app/database/alembic/: env.py
peas_backend/peas_app/database/alembic/tmp/: 0c2419e45f21_add_sodium_to_product.py  8d33bab41297_add_description_and_servings_to_recipe.py  ca9f4af0ff9d_init.py
peas_backend/peas_app/database/models/: models.py
peas_backend/peas_app/database/repositories/: base_repository.py  product_repository.py  recipe_repository.py
peas_backend/scripts/: dump_data_to_db.py
peas_backend/scripts/resources/: LivsmedelsDB_202411300928.xlsx
peas_backend/tests/api/mappers/: product_mapper_test.py  recipe_mapper_test.py  unit_mapper_test.py
peas_backend/tests/api/services/: conftest.py  product_service_test.py
peas_backend/tests/database/: conftest.py  product_repository_test.py  recipe_repository_test.py
(+34 files in other folders)
